[package]
name = "fountainhead"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bitcoin-consensus-encoding = "=0.1.0"
bitcoinkernel = "0.2.0"
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.9"
log = "0.4.29"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.27.0"
yaml_serde = "0.10.4"
